pridava SaveLoadSystem, PlayerData, pre testovanie sluzi TempBird

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Custom files
+PlayerData.json
+PlayerData.json.meta
+/[Aa]ssets/TextMesh*Pro*
